--- a/ch06/pom.xml
+++ b/ch06/pom.xml
@@ -10,5 +10,17 @@
   
   <build>
   	<finalName>ch06</finalName>
+  			<plugins>
+					<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://127.0.0.1:8088/manager/text</url>
+					<path>/ch06</path>
+					<username>admin</username>
+					<password>manager</password>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
 </project>
