--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,8 @@
 					<warSourceDirectory>src/main/webapp</warSourceDirectory>
 					<failOnMissingWebXml>true</failOnMissingWebXml>
 				</configuration>
-			</plugin>		
+			</plugin>
+					
 		</plugins>
 	</build>
   
@@ -65,5 +66,6 @@
   	<module>ch03</module>
   	<module>ch06</module>
   	<module>ch07</module>
+  	<module>ch08</module>
   </modules>
 </project>
